# CCF

./: .CodeQL.yml  .attestation_container_canary  .azure-pipelines-attestation-container.yml  .azure-pipelines-gh-pages.yml  .azure-pipelines-model-checking.yml  .azure-pipelines-no-sgx.yml  .azure-pipelines-quictls.yml  .azure-pipelines-release.yml  .azure-pipelines-v8.yml  .azure-pipelines.yml  .azure_pipelines_snp.yml  .azure_pipelines_snpcc.yml  .backportrc.json  .cg.yml  .clang-format  .clang-tidy  .cmake-format.py  .codecov.yml  .daily.yml  .daily_canary  .dockerignore  .gersemirc  .gitattributes  .gitconfig  .gitignore  .gitmodules  .lgtm.yml  .model_checking_canary  .multi-thread.yml  .nodes.sh  .prettierignore  .prettierrc.yaml  .pylintrc  .ruff.toml  .snpcc_canary  .stress.yml  .threading_canary  .vsts-ci-no-sgx.yml  .vsts-ci-san-and-doc.yml  .vsts-ci.yml  (+49 more)
ePBFT/: CMakeLists.txt  Dockerfile  config.json  notice-check.py
ePBFT/cmake/: pbft.cmake
ePBFT/config_private/: name-1  name-2  name-3  name-4  name-5  name-6  template
ePBFT/sphinx/: Makefile  requirements.txt
ePBFT/sphinx/source/: conf.py  index.rst  integration_progress.rst  proposed_integration_layout.rst  start_network.rst
ePBFT/tests/: sample_machines.csv  test_config_31  tests.sh
ePBFT/tests/infra/: create_config.py  e2e_test.py  headnode.py  node.py  summary.sh
python/: MANIFEST.in  README.md  config_1_x.ini  ledger_tutorial.py  merkle_tree_example.py  pyproject.toml  requirements.txt  setup.py  setup.py.in  tutorial.py  version.py.in  versionifier.py
python/ccf/: _versionifier.py  ballot_builder.py  bundle_js_app.py  bundle_js_modules.py  checker.py  clients.py  commit.py  cose.py  ledger.py  ledger_code.py  ledger_viz.py  log_capture.py  main.py  merkletree.py  migrate_1_x_config.py  plot_node_load.py  proposal_generator.py  read_ledger.py  receipt.py  split_ledger.py  tx_id.py  versionifier.py
python/ccf/templates/: ballot_script.js.jinja  ballots.json  macros.jinja  proposals.json  proposals.json.jinja
python/src/ccf/: _versionifier.py  cose.py  cose_receipt.py  fetch_amd_collateral.py  ledger.py  ledger_code.py  ledger_viz.py  merkletree.py  read_ledger.py  receipt.py  signatures.py  split_ledger.py  tx_id.py  verify_ledger.py  verify_ledger_secrets_chain.py
python/templates/: ballot_script.js  macros.jinja  proposals.json
python/tests/: test_compare_bencher_ab.py  test_cose_sign.py  test_merkle_tree.py
python/utils/: build_proposal.sh  jws_to_der.py  keygenerator.sh  scurl.sh  submit_recovery_share.sh  test_hsm.sh  verify_hsm.py  verify_quote.sh
samples/: CMakeLists.txt
samples/apps/: main.cpp
samples/apps/basic/: CMakeLists.txt  basic.cpp  oe_sign.conf
samples/apps/common/: default_on_commit.h
samples/apps/forum/: .gitignore  README.md  app.tmpl.json  ci.sh  package.json  rollup.config.js  tsconfig.json  tsconfig.test.json  tsoa.json
samples/apps/js_generic_extension/: CMakeLists.txt  js_generic.cpp  js_generic_base.cpp  js_generic_base.h
samples/apps/local_commit_handler/: CMakeLists.txt  localcommithandler.cpp
samples/apps/logging/: CMakeLists.txt  create_tx_claims_digest.cpp  formatters.h  get_ledger_sign_mode_cose.cpp  get_ledger_sign_mode_cose_allow_join_dual.cpp  get_ledger_signing_mode_cose.cpp  get_ledger_signing_mode_cose_allow_join_dual.cpp  index_by_value.h  js_endpoint_registry.h  logging.cpp  logging_schema.h  oe_sign.conf  stub_for_code_signing.cpp
samples/apps/nobuiltins/: CMakeLists.txt  nobuiltins.cpp  oe_sign.conf
samples/apps/poll/: .gitignore  app.tmpl.json  package.json  tsconfig.json
samples/apps/programmability/: CMakeLists.txt  audit_info.h  programmability.cpp
samples/apps/smallbank/: smallbank.cmake
samples/apps/tpcc/: tpcc.cmake  tpcc.cpp  tpcc_entities.h
samples/apps/txregulator/: README.md
samples/config/: config.json  join_config.json  minimal_config.json  minimal_config_redirects_role.json  minimal_config_redirects_static.json  recover_config.json  start_config.json  start_config_aci_sev_snp.json  start_config_aks_sev_snp.json  start_config_amd_sev_snp.json
samples/constitutions/default/: actions.js  resolve.js  validate.js
samples/constitutions/operator/: resolve.js
samples/constitutions/operator_provisioner/: resolve.js
samples/constitutions/roles/: set_role_definition.js
samples/constitutions/sandbox/: resolve.js
samples/constitutions/test/: resolve.js  test_actions.js
samples/constitutions/trusted_authority/: resolve.js
samples/constitutions/virtual/: virtual_attestation_actions.js
samples/minimal_ccf/: README.md  run_app.sh  use_minimal_ccf.sh
samples/minimal_ccf/app/: actions.js  cchost_config_virtual_js.json  config_virtual_js.json  member0_cert.pem  member0_enc_pubk.pem  service_cert.pem  validate.js
samples/minimal_ccf/ccf_runtime/: Dockerfile
samples/minimal_ccf/my_app/: Dockerfile
samples/perf_client/: compare.json  perf_client.h  perf_plot.py  plot_tx_times.py  requirements.txt  scenario_perf_client.cpp  scenario_perf_client.h  timing.h
samples/scripts/: compare.json  platform_info.sh  plot_tx_times.py  snpinfo.sh
samples/templates/: ballot.json.jinja  macros.jinja  set_js_app.json.jinja  set_user_proposal.json.jinja
src/apps/external_executor/: CMakeLists.txt  README.md  echo.proto  echo_pb2.py  echo_pb2_grpc.py  executor_auth_policy.h  executor_code_id.h  external_executor.cpp  external_executor_indexing.cpp  external_executor_indexing.h  grpc.h  grpc_status.h  lru_indexer.h
src/libmerkle++/test/: CMakeLists.txt  compare_evercrypt.cpp  demo_tree.cpp  flush.cpp  hashes.cpp  past_root.cpp  paths.cpp  retract.cpp  serialisation.cpp  time_large_trees.cpp  util.h
src/libmerklecpp/: CMakeLists.txt  merklecpp.h
src/libmerklecpp/test/: CMakeLists.txt  compare_evercrypt.cpp  compare_hash_functions.cpp  demo_tree.cpp  flush.cpp  hashes.cpp  partial_serialisation.cpp  past_paths.cpp  past_root.cpp  paths.cpp  retract.cpp  serialisation.cpp  time_large_trees.cpp  unit_tests.cpp  util.h
tests/ccfapp/: CMakeLists.txt  ccfapp.cpp  cpack.cmake
tests/perf-system/submitter/: submit.cpp  (+5 more)
(+13577 files in other folders)
